Cleanup interface for a first demo
DESCRIPTION
* Rename the application name
* Cleanup sidebar to remove useless element inherited from the original template.
* Restore full side video.
* Add missing string in the translation package.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -68,7 +68,7 @@
     "Edit exercise": "Edit exercise",
     "Manage Therapies": "Manage Therapies",
     "Refresh": "Refresh",
-    "Add new therapy": "Add new therapy",
+    "Add new therapy": "Ajoutez une thérapie",
     "Start": "Start",
     "End": "End",
     "Last Session": "Last Session",
@@ -79,6 +79,12 @@
     "Left": "Left",
     "Quit": "Quit",
     "Paralyzed Side": "Paralyzed side",
-    "Notes": "Notes"
+    "Notes": "Notes",
+    "Movement Duration": "Movement duration",
+    "Movement Repetition": "Movement repetition",
+    "Delay between repetition": "Delay between repetition",
+    "Daily Repetition": "Daily Repetition",
+    "Starting date": "Starting date"
+
 
 }
